--- a/highway-sequencer-app/src/app/components/video-preview/video-preview.component.scss
+++ b/highway-sequencer-app/src/app/components/video-preview/video-preview.component.scss
@@ -1,6 +1,6 @@
 :host {
   display: block;
   padding: 16px 16px 0px 16px;
-  width: 272px;
-  height: 153px;
+  width: 254px;
+  height: 143px;
 }
