--- a/highway-sequencer-app/src/styles.scss
+++ b/highway-sequencer-app/src/styles.scss
@@ -7,4 +7,7 @@ $layout: transparent;
   font-family: 'Syne Mono', monospace;
 }
 
-
+body {
+  margin: 0;
+  padding: 0;
+}
